--- a/ZewoSrv/Dockerfile
+++ b/ZewoSrv/Dockerfile
@@ -1,4 +1,4 @@
-FROM zewo/swiftdocker:0.7.0
+FROM ubuntu:15.10
 
 ENV APP_NAME=ZewoSrv
 
@@ -8,10 +8,26 @@ ADD ./Package.swift /$APP_NAME/
 ADD ./Sources /$APP_NAME/Sources
 
 RUN apt-get update
-RUN echo "Y" | apt-get install clang libicu-dev binutils git libpq-dev postgresql
+RUN echo "Y" | apt-get install clang libicu-dev binutils git libpq-dev postgresql curl
 
-RUN swift build -Xcc -I/usr/include/postgresql -Xlinker -L/usr/local/lib/ --configuration release
+RUN cd /root/
+RUN rm -rf swift-3.0-preview-1-ubuntu15.10.tar.gz
+RUN curl -O https://swift.org/builds/swift-3.0-preview-1/ubuntu1510/swift-3.0-preview-1/swift-3.0-preview-1-ubuntu15.10.tar.gz
+RUN tar -zxf swift-3.0-preview-1-ubuntu15.10.tar.gz
+RUN mv swift-3.0-preview-1-ubuntu15.10 swift
+RUN rm -rf swift-3.0-preview-1-ubuntu15.10.tar.gz
+RUN cd /$APP_NAME/
 
-EXPOSE 8080
+#RUN export PATH=/root/swift/usr/bin:\"\${PATH}\"
+#RUN ls /
+#RUN echo "export PATH=/$APP_NAME/swift/usr/bin:\"\${PATH}\"" >> ~/.bashrc
+#RUN source ~/.bashrc
 
-CMD .build/release/$APP_NAME
+#RUN swift build -Xcc -I/usr/include/postgresql -Xlinker -L/usr/local/lib/
+# --configuration release
+
+#EXPOSE 8080
+
+#CMD .build/debug/$APP_NAME
+
+CMD while true; do foo; sleep 2; done
